# customkb

./: .bash_completion  .coveragerc  .editorconfig  .env.test  .flake8  .gitcommit  .gitignore  .gitpushcommit  .pre-commit-config.yaml  .push-to-okusi.excludes  .ruff.toml  AUDIT-EVALUATE.md  AUDIT-PYTHON.md  AUDIT-RE-EVALUATION.md  CHANGELOG.md  CLAUDE.md  CRASH_ANALYSIS.md  CRASH_INCIDENT_4.md  DEVELOPMENT.md  MIGRATION-PYTHON312.md  Models.json  PURPOSE-FUNCTIONALITY-USAGE.md  README.md  REDUNDANT_FILES_REPORT.md  TEST_RESULTS_SUMMARY.md  TEST_SUITE_SUMMARY.md  cleanup_nltk_stopwords.py  codex.md  customkb  customkb.bash_completion  customkb.py  demo_per_kb_logging.py  download_nltk_stopwords.py  example.cfg  gpu_index_config.py  migrate_type_hints_v2.py  okusiassociates.cfg  optimize-kb  push-to-okusi3.sh  pyproject.toml  (+21 more)
.archive/migrations/: migrate_type_hints.py
.archive/phases/: NEXT_PHASE_IMPLEMENTATION.md  PHASE3_REFACTORING.md  QUICK_WINS_IMPLEMENTATION.md
.archive/transitions/: KB_RESOLUTION_SUMMARY.md
.claude/agents/: code-reviewer.md
.github/: dependabot.yml
.github/workflows/: security-scan.yml
.mailer/: CLAUDE.md  README.md  email_config.yaml  email_processor  pytest.ini
.mailer/tests/: __init__.py  conftest.py
.mailer/tests/fixtures/: test_config.yaml
.mailer/tests/integration/: test_email_pipeline.py
.mailer/tests/unit/: test_email_processor.py  test_logging.py
.reviews/: phase1-foundation-review.md  phase2-database-review.md  phase3-embedding-review.md  phase4-query-review.md  phase5-models-review.md  phase6-advanced-features-review.md  phase7-testing-review.md  phase8-utilities-review.md  phase9-12-final-reviews.md
categorize/: __init__.py  categorize_manager.py  category_deduplicator.py  import_to_db.py
config/: config_manager.py  dev-machine-cuda.cfg  example_logging.cfg  models.py  production-optimized.cfg  safe-medium-tier.cfg
database/: chunking.py  connection.py  db_manager.py  index_manager.py  migrations.py
docs/: AUDIT-EVALUATE.md  DEVELOPMENT.md  DOCS_UPDATE_SUMMARY.md  GPU_ACCELERATION.md  GPU_MEMORY_MANAGEMENT.md  INSTALLATION.md  KB_RESOLUTION_CHANGES.md  KB_RESOLUTION_SUMMARY.md  LOGGING_STANDARDS.md  MIGRATION_GUIDE.md  SAFE_TESTING_GUIDE.md  customkb.1  embeddings-models-comparison.md  performance_optimization_guide.md  vector-db-evaluation.md
docs/incidents/: SYSTEM_HANG_ANALYSIS.md
embedding/: batch.py  bm25_manager.py  cache.py  embed_manager.py  embed_manager_improved.py  index.py  litellm_provider.py  providers.py  rerank_manager.py
examples/: gpu_index_config.py
gpu_patches/: emergency_optimize.patch  optimize_kb_performance.patch  query_manager.patch  show_optimization_tiers.patch
mailer/: .last_check  AUDIT-EVALUATE.md  TESTING_IMPLEMENTATION_SUMMARY.md  config_loader.py  email_processor.py  requirements-dev.txt  requirements.txt  run_tests.sh
mailer/tests/unit/: test_config_loader.py
mailer/tests/utils/: test_helpers.py
mailer/thunderbird-external-ai/: README.md  THUNDERBIRD_COMPOSE_METHODS.md  ai_reply_generator.py  test_compose_methods.py  thunderbird_ai_reply.py
mcp_server/: __init__.py  requirements.txt  server.py
models/: model_manager.py
query/: embedding.py  enhancement.py  formatters.py  llm.py  processing.py  prompt_templates.py  query_manager.py  response.py  search.py
scripts/: README.md  add_embedded_index.py  benchmark_gpu.py  benchmark_vectordb.py  clean_corrupted_cache.py  diagnose_crashes.py  emergency_cleanup.sh  emergency_optimize.py  gpu_env.sh  gpu_monitor.sh  optimize_kb_performance.py  optimize_kb_performance.py.backup.20250629_094943  rebuild_bm25_filtered.py  retrieve_api.py  safe_test_runner.sh  security-check.sh  show_optimization_tiers.py  update_dependencies.py  upgrade_bm25_tokens.py  verify_indexes.py
setup/: install_faiss.sh  nltk_setup.py
tests/: PHASE_COMPLETION_SUMMARY.md  README.md  TESTING_SAFETY.md  TEST_STATUS.md  __init__.py  batch_runner.py  conftest.py
tests/fixtures/: __init__.py  mock_data.py
tests/fixtures/sample_configs/: test_minimal.cfg
tests/fixtures/sample_texts/: sample1.txt  sample2.txt  sample3.txt
tests/integration/: __init__.py  test_bm25_integration.py  test_end_to_end.py  test_reranking_integration.py  test_test_kb.py
tests/performance/: __init__.py  test_bm25_performance.py  test_performance.py
tests/unit/: __init__.py  test_bm25_backward_compatibility.py  test_bm25_manager.py  test_categorize_manager.py  test_category_deduplicator.py  test_config_manager.py  test_config_models.py  test_consecutive_formatting.py  test_database_chunking.py  test_database_connection.py  test_database_migrations.py  test_db_manager.py  test_embed_manager.py  test_enhancement.py  test_exceptions.py  test_formatters.py  test_google_embedding.py  test_index_manager.py  test_model_manager.py  test_optimization_manager.py  test_prompt_templates.py  test_query_manager.py  test_rerank_manager.py  test_response.py  test_search.py
tests/unit/utils/: __init__.py  test_logging_utils.py  test_security_utils.py  test_text_utils.py
tests/utils/: adaptive_thresholds.py
tests/vectordbs/appliedanthropology/: appliedanthropology.cfg
utils/: context_managers.py  cuda_init.py  customkb_completion.bash  encoding_converter.py  enums.py  exceptions.py  faiss_loader.py  gpu_utils.py  language_detector.py  logging_config.py  logging_utils.py  optimization_manager.py  performance_analyzer.py  resource_manager.py  security_utils.py  text_utils.py
utils/bash_completions/: .bash_completion  CLAUDE.md  README.md  customkb  mk-README.sh
utils/citations/: .bash_completion  .gitignore  AUDIT-EVALUATE.md  CLAUDE.md  README.md  append-citations  append-citations.sh  citation_env.sh.example  citations.sql  gen-citations  gen-citations.sh
utils/citations/lib/: api_functions.sh  db_functions.sh  parallel_functions.sh
utils/citations/tests/: README.md  run_tests.sh  test_config.sh  test_helpers.sh
utils/citations/tests/integration/: test_append_citations.sh  test_gen_citations.sh  test_workflow.sh
utils/citations/tests/mocks/: mock_openai_api.sh
(+108 files in other folders)
