[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customkb"
version = "1.1.0"
description = "AI-powered knowledgebase management system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
authors = [
    {name = "CustomKB Team", email = "admin@okusi.id"},
]
keywords = ["ai", "knowledge-base", "embeddings", "llm", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.0.0",
    "colorlog>=6.9.0",
    "cryptography>=46.0.0",
    "filetype>=1.0.0",
    "google-genai>=1.31.0",
    "httpx>=0.24.0",
    "langchain-text-splitters>=0.3.7",
    "langdetect>=1.0.9",
    "litellm>=1.50.0",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "nvidia-ml-py>=12.0.0",
    "openai>=1.67.0",
    "pandas>=2.0.0",
    "pillow>=9.0.0",
    "post-slug>=1.0.0",
    "protobuf>=5.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.0.0",
    "sentence-transformers>=2.7.0",
    "spacy>=3.7.5",
    "tiktoken>=0.5.0",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "coverage>=7.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
    "safety>=3.0.0",
]
test = [
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "responses>=0.23.0",
]
faiss-cpu = ["faiss-cpu>=1.12.0"]
faiss-gpu-cu11 = ["faiss-gpu-cu11>=1.12.0"]
faiss-gpu-cu12 = ["faiss-gpu-cu12>=1.12.0"]
mcp = ["mcp>=1.0.0"]

[project.scripts]
customkb = "customkb:main"

[project.urls]
Homepage = "https://github.com/Open-Technology-Foundation/customkb"
Documentation = "https://docs.okusi.id/customkb"
Repository = "https://github.com/Open-Technology-Foundation/customkb.git"
Issues = "https://github.com/Open-Technology-Foundation/customkb/issues"

[tool.hatch.build.targets.wheel]
packages = ["config", "database", "embedding", "query", "models", "utils", "categorize", "mcp_server"]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    ".venv",
    ".mailer",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-v",
    "--tb=short",
    "--maxfail=5",
    "--timeout=300",
    "--timeout-method=thread",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (moderate speed, requires components)",
    "slow: Tests that take more than 5 seconds",
    "requires_api: Tests requiring real API keys",
    "requires_data: Tests requiring external test data",
    "performance: Performance and benchmarking tests",
    "resource_intensive: Tests that use significant memory/CPU",
    "asyncio: Async tests using pytest-asyncio",
    "requires_faiss: Tests requiring FAISS library",
]
asyncio_mode = "auto"
junit_family = "xunit2"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:spacy*",
    "ignore::FutureWarning:transformers*",
    "ignore::RuntimeWarning:numpy*",
    "ignore:Using `@model_validator`.*deprecated:DeprecationWarning",
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    ".mailer/*",
    "tests/*",
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
    "*/setup.py",
    "run_tests.py",
    "*/migrations/*",
    "*/config/*",
    "*/static/*",
    "*/templates/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "logger\\.debug",
]
precision = 2
skip_covered = false
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"